=========================
Change log for tl.eggdeps
=========================

0.4 (unreleased)
================

- Several code clean-ups, added some documentation.


0.3.2 (2009-03-25)
==================

Features:
  - Added an API for including a comment in a generated dot file, use it to
    record the arguments eggdeps was called with. Thanks to Christian
    Zagrodnick for the suggestion.

Bug fixes:
  - Omission of a subtree in the plaintext output would cause all following
    siblings of the mount point to be skipped.

  - The plaintext graph built from the whole working set would be incomplete
    if any graph roots were cyclic. One distribution from each such cycle will
    be considered a root now. This also affects colors in dot graphs.


0.3.1 (2008-05-12)
==================

Features:
  - Added an option --version-specs (-s) for printing complex version
    specifications in a requirements list. They take into account the
    intersection of all version requirements for a particular distribution,
    but disregard extras completely for the time being.


0.3 (2008-03-29)
================

Features:
  - added an option --once (-1) for printing each distribution only once in
    plain text output

  - added an option --terse (-t) for suppressing hints at subtrees that are
    not printed in order to avoid duplication in plain text output

  - added an option --requirements (-r) for printing a list of requirement
    specifications from the dependency graph

Organisation:
  - added tests for output modules


0.2.2 (2008-03-10)
==================

Bug fixes:
  - In dot output, quote distribution names instead of escaping some
    characters. Escaping only '.' was not sufficient - thanks to
    Phillip J. Eby for the bug report.


0.2.1 (2007-08-06)
==================

User visible:
  - renamed the --print-version option to --version-numbers

  - In plain text output, print the names of extras above their dependencies